fix letter-spacing on body and teachers.html

--- a/src/css/base/cammon.css
+++ b/src/css/base/cammon.css
@@ -4,7 +4,7 @@ body {
   font-family: 'Manrope', sans-serif;
   font-size: 14px;
   line-height: 1.7;
-  letter-spacing: 0.02em;
+  letter-spacing: normal;
 }
 
 .link {
@@ -80,5 +80,7 @@ body {
     margin-bottom: 64px;
     margin-right: auto;
     margin-left: auto;
+    font-size: 18px;
+    line-height: 30px;
   }
 }
